--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,2 +1,11 @@
-<!DOCTYPE html><html><head><title>Frozen Food Business</title></head><body><div id='root'></div></body></html>
-<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Frozen Food Business</title>
+  </head>
+  <body>
+    <div id="root"></div>
+  </body>
+</html>
