Improve responsiveness and footer

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,6 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"
+      integrity="sha512-2vi+lRRFdyefDs2fzGEylh4G6dkprdFM5lTyBC0bYKT1eZqUPVHtVHCnQWmvMRGsiE232zraFMvxh1zVD/kzOw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
     <title>Frozen Food Business</title>
   </head>
   <body>
