--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -10,9 +10,22 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUa6IC1XJg4A1JmsdJu2fDFTB6loI1l0IhbB0nEjZljMkJLpoJwZ0p3h7vZ7"
+      crossorigin="anonymous"
+    />
     <title>Frozen Food Business</title>
   </head>
   <body>
     <div id="root"></div>
+    <!-- Bootstrap JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-w76A9YHx8HkqsLhM9fA6Qc9tqtWNY3PtwE0vtKZuqfDvF8ULpHPF0b0N4XKyd3v8"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
